name:                la-gridfield
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Linearity/la-gridfield#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Stuart
maintainer:          example@example.com
copyright:           2020 Alex Stuart
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Lightarrow.GridField
                       Lightarrow.GridField.Action
                       Lightarrow.GridField.Actuation
                       Lightarrow.GridField.Avatar
                       Lightarrow.GridField.AvatarSign
                       Lightarrow.GridField.CardinalDirection
                       Lightarrow.GridField.Character
                       Lightarrow.GridField.CharacterSign
                       Lightarrow.GridField.FieldSign
                       Lightarrow.GridField.NPC
                       Lightarrow.GridField.Terrain
                       Lightarrow.GridField.TerrainElement
  default-extensions:  Arrows
                       BangPatterns
                       ConstraintKinds
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       MultiParamTypeClasses
                       MultiWayIf
                       OverloadedStrings
                       PartialTypeSignatures
                       RankNTypes
                       TupleSections
                       TypeFamilies
                       TypeSynonymInstances
                       ScopedTypeVariables 
  build-depends:       base >= 4.7 && < 5,
                       bearriver,
                       containers,
                       lightarrow,
                       linear,
                       mtl,
                       optics,
                       text,
                       tf-random
